syntax = "proto3";

package pay;

option java_outer_classname = "PayProto";
option java_package = "com.github.wongoo.dapr.pay.proto";

// User Code definitions
service PayService {
  rpc Pay (PayRequest) returns (PayResponse) {}
}

message PayRequest {
  uint64 orderId = 1;
  string productId = 2;
  uint32 count = 3;
  uint64 price = 4;
  uint64 amount = 5;
  uint64 discount = 6;
}

message PayResponse {
  string code = 1;
  string message = 2;
}

message PayEvent {
  uint64 orderId = 1;
  uint32 status = 2;
  string message = 3;
}
